# ncmpcpp

./: .gitignore  Makefile.am  configure.in
doc/: ncmpcpp.1
po/: Makevars  POTFILES.in  ncmpcpp.pot  ru.po
src/: Makefile.am  browser.cpp  clock.cpp  conv.cpp  conv.h  display.cpp  help.cpp  helpers.cpp  helpers.h  i18n.h  lastfm.cpp  lastfm_service.cpp  lastfm_service.h  lyrics.cpp  media_library.cpp  ncmpcpp.cpp  playlist.cpp  playlist_editor.cpp  scrollpad.cpp  scrollpad.h  search_engine.cpp  search_engine.h  sel_items_adder.cpp  server_info.cpp  settings.cpp  settings.h  song_info.cpp  song_info.h  status.cpp  tag_editor.cpp  tiny_tag_editor.cpp  visualizer.cpp  window.h
