# not a GNU package. You can remove this line, if
# have all needed files, that a GNU package needs
AUTOMAKE_OPTIONS = foreign 1.4

SUBDIRS = po src doc
docdir = $(prefix)/share/doc/$(PACKAGE)
doc_DATA = AUTHORS NEWS COPYING
EXTRA_DIST = config.rpath m4/ChangeLog  $(doc_DATA)

ACLOCAL_AMFLAGS = -I m4
